# tv-scraper-py

./: LICENSE  README.md  pyproject.toml  setup.py
tv_scraper/: __init__.py
