[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tv-view-scraper"
version = "0.1.0"
description = "TradingView data scraper with multiple output formats"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Anurag Jha", email = "anuragjha507@gmail.com"}
]
keywords = ["tradingview", "scraper", "crypto", "stocks", "data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "websocket-client>=1.4.0",
]

[project.optional-dependencies]
pandas = ["pandas>=1.3.0"]
numpy = ["numpy>=1.20.0"]
ui = ["ipywidgets>=7.7.0"]
all = ["tv-view-scraper[pandas,numpy,ui]"]
dev = ["tv-view-scraper[all]", "pytest>=7.0", "pytest-cov>=4.0", "black>=23.0", "flake8>=6.0"]

[project.urls]
Homepage = "https://github.com/anuragjha0001/tv_scraper"
Repository = "https://github.com/anuragjha0001/tv_scraper.git"
Issues = "https://github.com/anuragjha0001/tv_scraper/issues"

[tool.setuptools]
packages = ["tv_scraper"]
